--- a/src/app/modules/dashboard/pages/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard.component.html
@@ -51,7 +51,7 @@
                 </tr></thead>
                 <tbody>
                     <tr *ngFor="let user of data.tableUsers; index as i;">
-                    <td data-label="#">{{i}}</td>
+                    <td data-label="#">{{i+1}}</td>
                     <td data-label="Firstname">{{user.firstName}}</td>
                     <td data-label="Lastname">{{user.lastName}}</td>
                     <td data-label="Username">{{user.username}}</td>
